[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/node_fsm_plugin/fsm_node.gd" type="Script" id=1]
[ext_resource path="res://scenes/ai/_BaseAI.gd" type="Script" id=2]
[ext_resource path="res://assets/ai/sfx_AI_Detect.wav" type="AudioStream" id=3]





[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 1000.0

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[node name="AI" type="Node2D"]
script = ExtResource( 2 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 1 )
active = true
initial_state = ""
target = NodePath("")

[node name="DetectionRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 1 )

[node name="FleeChargeRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeChargeRange"]
shape = SubResource( 2 )

[node name="TargetRay" type="RayCast2D" parent="."]
cast_to = Vector2( 1000, 0 )

[node name="VelocityRay" type="RayCast2D" parent="."]
cast_to = Vector2( 1, 0 )

[node name="Detect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="body_entered" from="FleeChargeRange" to="." method="_on_FleeChargeRange_body_entered"]
